generate_data/jitfailure-dolfin_expression_eb03d18253a8ef19e433939e3a966c1e/error.log
In file included from /usr/local/include/boost/config/header_deprecated.hpp:18,
                 from /usr/local/include/boost/core/swap.hpp:19,
                 from /usr/local/include/boost/optional/optional.hpp:33,
                 from /usr/local/include/boost/optional.hpp:15,
                 from /usr/local/include/dolfin/parameter/Parameters.h:24,
                 from /usr/local/include/dolfin/common/Variable.h:28,
                 from /usr/local/include/dolfin/function/GenericFunction.h:30,
                 from /usr/local/include/dolfin/function/Expression.h:28,
                 from /tmp/tmpvoh9kq9c/dolfin_expression_eb03d18253a8ef19e433939e3a966c1e.cpp:13:
/usr/local/include/boost/core/swap.hpp:26:1: note: ‘#pragma message: This header is deprecated. Use boost/core/invoke_swap.hpp instead.’
   26 | BOOST_HEADER_DEPRECATED("boost/core/invoke_swap.hpp")
      | ^~~~~~~~~~~~~~~~~~~~~~~
/tmp/tmpvoh9kq9c/dolfin_expression_eb03d18253a8ef19e433939e3a966c1e.cpp: In member function ‘virtual void dolfin::dolfin_expression_eb03d18253a8ef19e433939e3a966c1e::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpvoh9kq9c/dolfin_expression_eb03d18253a8ef19e433939e3a966c1e.cpp:61:40: error: expression cannot be used as a function
   61 |           values[0] = 4 * 0.001 * x[1] (7.499999999999999e-06 - x[1]) / (7.499999999999999e-06^2);
      |                                   ~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tmpvoh9kq9c/dolfin_expression_eb03d18253a8ef19e433939e3a966c1e.cpp:61:95: error: invalid operands of types ‘double’ and ‘int’ to binary ‘operator^’
   61 |           values[0] = 4 * 0.001 * x[1] (7.499999999999999e-06 - x[1]) / (7.499999999999999e-06^2);
      |                                                                          ~~~~~~~~~~~~~~~~~~~~~^~
      |                                                                          |                     |
      |                                                                          double                int
